fix nav, header spacing issues

--- a/style.css
+++ b/style.css
@@ -28,17 +28,15 @@ img {
   display: block;
   max-width: 100%;
 }
-main {
-  padding: 30px;
-}
+
 .container {
-  max-width: 960px;
-  margin-inline: auto;
+  min-height: 450px;
 }
-header {
+header, main {
   position: relative;
   display: grid;
-  min-height: 450px;
+  max-width: 960px;
+  margin-inline: auto;
   margin-top: 5rem;
 }
 nav {
@@ -48,8 +46,7 @@ nav {
   backdrop-filter: blur(10px);
   padding: 0.5rem 1rem;
   display: flex;
-  justify-content: flex-start;
-  gap: 3rem;
+  justify-content: space-around;
   align-items: center;
   z-index: 10;
   box-sizing: border-box;
@@ -126,7 +123,7 @@ footer {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(10px);
-  padding: 2rem;
+  padding: 2rem 0;
   display: flex;
   justify-content: center;
   gap: 2rem;
